<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.tathagat</groupId>
    <artifactId>twitterkafka</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>3.2.2</version>
        </dependency>
	    <dependency>
	    	<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220924</version>
	    </dependency>
	    <dependency>
	    	<groupId>org.apache.httpcomponents</groupId>
			  <artifactId>httpclient</artifactId>
			  <version>4.5.13</version>
	    </dependency>
	    <dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.12</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_2.12</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql-kafka-0-10_2.12</artifactId>
			<version>3.3.0</version>
		</dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
    	<plugins>
    		<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>3.0.0-M7</version>
			  <configuration>
			    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
			  </configuration>
			</plugin>
    	</plugins>
    </build>

</project>
